# mcp-template

./: .env.example  README.md  package.json  pyproject.toml
cli/: index.ts
src/: client.py  main.py  tools.py
src-api-key/: client.py
src-oauth/: client.py
